--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,13 @@
 Here you'll find a list oa all the contributors:-
 
 1. Haifa AlRabeeah
+   Contact info: 439202913@student.ksu.edu.sa
+
 2. Hana AlRabeeah
+   Contact info: 439202914@student.ksu.edu.sa
+
 3. Ghada AlFaris
-4. Majd Almuhanna
+   Contact info: 439201167@student.ksu.edu.sa
+
+4. Majd Almuhanna   
+   Contact info: 439201099@student.ksu.edu.sa
